# keeperfx

./: .appveyor.yml  .clang-format  .cproject  .editorconfig  .gitattributes  .gitignore  .gitmodules  .header_checksum  .pre-commit-config.yaml  .project  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CompileKeeperFX.bat  Makefile  README.md  dtxlbh.s  dtxlbt.s  enet.mk  format.py  gdb.args  keeperfx.code-workspace  keeperfx.exe.manifest  keeperfx_readme.txt  keeperfx_vs2010.sln  keeperfx_vs2010.vcxproj  keeperfx_vs2010.vcxproj.filters  lang.mk  launch.vs.json  libexterns.mk  linux.cmake  linux.mk  luau.mk  macos.mk  mingw32.cmake  package.mk  pkg_gfx.mk  pkg_gfx_v2.mk  pkg_lang.mk  pkg_sfx.mk  (+20 more)
.github/workflows/: CI.yml  PR.yml  Push.yml  build-alpha-patch-signed.yml  build-alpha-patch-unsigned.yml  build-alpha-patch.yml  build-macos.yml  build-msvc-cmake.yml  build-prototype.yml  build-release-patch-signed.yml  build-release-patch-unsigned.yml  linux-appimage.yml
KeeperSpeech/: KeeperCommands.xml  KeeperSpeech.cpp  KeeperSpeech.h  KeeperSpeech.rc  KeeperSpeech.vcxproj  KeeperSpeech.vcxproj.filters  install_api.bat  resource.h  stdafx.cpp  stdafx.h
campgns/: ami2019.cfg  ancntkpr.cfg  burdnimp.cfg  campgn_order.txt  cqarctic.cfg  dstninja.cfg  dzjr06lv.cfg  dzjr10lv.cfg  dzjr25lv.cfg  evilkeep.cfg  grkreign.cfg  jdkmaps8.cfg  kdklvpck.cfg  keeporig.cfg  keeporig_archipelago.cfg  lqizgood.cfg  lrdvexer.cfg  ncastles.cfg  origplus.cfg  postanck.cfg  pstunded.cfg  questfth.cfg  revlord.cfg  twinkprs.cfg  undedkpr.cfg
campgns/ami2019/: MAP10001.txt  MAP10002.txt  MAP10003.txt  MAP10004.txt  MAP10005.txt  MAP10006.txt  MAP10007.txt  MAP10008.txt  MAP10009.txt  MAP10010.txt  MAP10011.txt  MAP10012.txt  MAP10013.txt  MAP10014.txt  MAP10021.txt  MAP10022.txt  map00001.txt  map00002.txt  map00003.txt  map00004.txt  map00005.txt  map00006.txt  map00007.txt  map00008.txt  map00009.txt  map00010.txt  map00011.txt  map00012.txt  map00013.txt  map00014.txt  map00021.txt  map10001.txt  map10002.txt  map10003.txt  map10005.txt  map10006.txt  map10007.txt  map10008.txt  map10010.txt  map10011.txt  (+4 more)
campgns/ami2019_cfgs/: trapdoor.cfg
campgns/ami2019_crtr/: archer.cfg  avatar.cfg  barbarian.cfg  bile_demon.cfg  bug.cfg  dark_mistress.cfg  demonspawn.cfg  dragon.cfg  druid.cfg  dwarfa.cfg  fairy.cfg  floating_spirit.cfg  fly.cfg  ghost.cfg  giant.cfg  hell_hound.cfg  horny.cfg  imp.cfg  knight.cfg  monk.cfg  orc.cfg  samurai.cfg  skeleton.cfg  sorceror.cfg  spider.cfg  tentacle.cfg  thief.cfg  troll.cfg  tunneller.cfg  (+3 more)
config/: keeperfx.cfg
docs/: MACOS_ARM64_PORT.md  build_instructions.txt  coding_style_for_eclipse.xml  computer_ai.md  creating_campaigns.txt  custom_levels_play.txt  data_structure.md  dev_creature_ai_errors.txt  dev_sacrifice.txt  dev_sai.txt  dev_sounds_unused.txt  files_required_from_original_dk.txt  issue-triage-2026-07.md  keeperfx_readme.txt  launcher-auto-file-removal.txt  login_sequence.md  multiplayer_readme.txt  new_mp.txt  precommit.md  tcp_readme.txt
ftests/: campaign.cfg
javatools/: .classpath
keeperfx/: .cproject  .project  Makefile  Makefile_WindowsNonCygwin  keeperfx.sln  keeperfx.vcxproj  keeperfx.vcxproj.filters  keeperfx_vs2010.sln  keeperfx_vs2010.vcxproj  keeperfx_vs2010.vcxproj.filters  version.mk
lang/: gtext_chi.po  gtext_cht.po  gtext_cze.po  gtext_dut.po  gtext_eng.pot  gtext_fre.mo  gtext_fre.po  gtext_ger.po  gtext_ita.po  gtext_jap.po  gtext_jpn.po  gtext_kor.po  gtext_lat.po  gtext_pol.po  gtext_por.po  gtext_por.pot  gtext_rus.po  gtext_spa.po  gtext_swe.po  gtext_ukr.po  speech_chi.po  speech_cze.po  speech_eng.pot  speech_jpn.po  speech_kor.po  speech_pol.po  speech_por.po  speech_rus.po  speech_spa.po
launcherwx/: .cproject  Makefile
levels/: classic.cfg  deepdngn.cfg  legacy.cfg  lostlvls.cfg  mappck_order.txt  personal.cfg  standard.cfg
lib/: keeper95_gold.map  keeperfx.def  keeperfx.lib  keeperfx.map
lua/: native.lua  templates.lua  triggers.lua
mpmaps/: classic.cfg  keeporig.cfg  mp_mappck_order.txt  original.cfg  standard.cfg
multiplayer/: classic.cfg  modern.cfg  mp_mappck_order.txt  original.cfg  standard.cfg
res/: keeperfx_stdres.rc
src/: KeeperSpeech.h  KeeperSpeechImp.c  actionpt.c  actionpt.h  api.c  api.h  ariadne.c  ariadne.h  ariadne_edge.c  ariadne_edge.h  ariadne_findcache.c  ariadne_findcache.h  ariadne_naviheap.c  ariadne_naviheap.h  ariadne_navitree.c  ariadne_navitree.h  ariadne_points.c  ariadne_points.h  ariadne_regions.c  ariadne_regions.h  ariadne_tringls.c  ariadne_tringls.h  ariadne_update.c  ariadne_update.h  ariadne_wallhug.c  ariadne_wallhug.h  bflib_base_tcp.cpp  bflib_base_tcp.hpp  bflib_basics.c  bflib_basics.h  bflib_basinln.h  bflib_bufrw.c  bflib_bufrw.h  bflib_client_tcp.cpp  bflib_client_tcp.hpp  bflib_coroutine.c  bflib_coroutine.h  bflib_cpu.c  bflib_cpu.h  bflib_crash.c  (+645 more)
submodule/: CMakeLists.txt
tests/: 001_test.cpp  002_sight.cpp  CMakeLists.txt  campaign.cfg  cleanse.feature  custom_allocator.h  test_CreatureTree.cpp  test_invariant_api.c  test_rtree.cpp  tst_enet_client.cpp  tst_enet_server.cpp  tst_fixes.cpp  tst_main.cpp  tst_main.h  tst_utils.cpp
tests/functional/: test_net.cpp
tests/levels/: map00001.clm  map00001.lgt  map00001.lif  map00001.lof  map00001.own  map00001.slb  map00001.tng  map00001.txt  map00001.wib  map00001.wlb
tools/: CMakeLists.txt  build_macos_deps.sh  macos_bundle.sh  make_macos_app.sh
tools/ec/: Makefile  Makefile.win  keepfx_ec.c  keepfx_ec.dev
tools/fxfontmaker/: bdf_to_hex.py  make_fonts.bat  make_fonts.sh  merge_hex.py  rescale_unifont_hex.py  unifont-17.0.04.hex  unifont_hex_to_binary.py  unifont_jp-17.0.04.hex  unifont_t-17.0.04.hex
wiki/: CommandLineOptions.wiki  ConvertPoToDat.wiki  CorTran.wiki  CreateNewPot.wiki  DownloadsPage.wiki  General.wiki  MadEdit.wiki  ModifyExistingPot.wiki  NewInGameCommands.wiki  NewLanguage.wiki  NewLevelScriptCommands.wiki  NewTrans.wiki  POEdit.wiki  PlayingCustomMaps.wiki  TextLangMain.wiki  TheConfigurationFile.wiki  Troubleshooting.wiki  VersionHistory.wiki  VoiceCommands.wiki
(+4716 files in other folders)
